--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
         <ul id="taskList"></ul>
     </div>
 
-    <script src="script.js"></script>
+    <script src="base.js"></script>
 </body>
 </html>
