--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Простий список задач</title>
-    <link rel="stylesheet" href="base.css">
+    <link rel="stylesheet" href="base1.1.css">
 </head>
 <body>
     <div class="todo-container">
@@ -16,6 +16,45 @@
         <ul id="taskList"></ul>
     </div>
 
-    <script src="base.js"></script>
+    <script src="base1.1.js"></script>
+</body>
+</html> -->
+
+
+
+
+<!DOCTYPE html>
+<html lang="uk">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Генератор паролів</title>
+    <link rel="stylesheet" href="base1.2.css">
+</head>
+<body>
+    <div class="password-generator">
+        <h1>Генератор надійних паролів</h1>
+
+        <label for="length">Довжина пароля:</label>
+        <input type="number" id="length" min="4" max="50" value="12">
+
+        <div class="options">
+            <label><input type="checkbox" id="includeLowercase" checked> Малі літери (a-z)</label>
+            <label><input type="checkbox" id="includeUppercase" checked> Великі літери (A-Z)</label>
+            <label><input type="checkbox" id="includeNumbers" checked> Цифри (0-9)</label>
+            <label><input type="checkbox" id="includeSymbols"> Символи (!@#$...)</label>
+        </div>
+
+        <button id="generateBtn">Згенерувати пароль</button>
+
+        <div class="result">
+            <input type="text" id="passwordOutput" readonly>
+            <button id="copyBtn">Копіювати</button>
+        </div>
+    </div>
+
+    <script src="base1.2.js"></script>
 </body>
 </html>
+
+
